Add Git repository URL description
Signed-off-by: ivinokur <ivinokur@redhat.com>

--- a/modules/end-user-guide/pages/starting-a-workspace-from-a-git-repository-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-workspace-from-a-git-repository-url.adoc
@@ -7,6 +7,17 @@
 [id="starting-a-workspace-from-a-git-repository-url"]
 = Starting a workspace from a Git repository URL
 
+In the context of this procedure, "Git repository URL" refers to a git clone URL of a repository. Usually, you can fetch this URL by clicking on the *Clone* button in the SCM repository's main page.
+Alternatively, you can copy the URL from the address bar of your browser when you are on the main page of the repository.
+Selecting a branch or a tag will add the reference parameter to the URL.
+[NOTE]
+====
+For GitHub, you can also use a repository URL of a directory with a devfile, or a repository URL of the devfile.
+The name of the devfile must be `devfile.yaml` or `.devfile.yaml`.
+
+This feature is not supported for other Git providers.
+====
+
 With {prod-short}, you can use a URL in your browser to start
 a new workspace that contains a clone of a Git repository.
 This way, you can clone a Git repository that is hosted on GitHub, GitLab, Bitbucket or Microsoft Azure DevOps server instances.
