--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -42,7 +42,7 @@ The `tools` component of the devfile defines the following requests and limits:
     cpuLimit: 500m
 ----
 
-** IMPORTANT: Aditional memory and CPU will be added implicitly for the Visual Studio Code - Open Source ("Code - OSS"):
+** IMPORTANT: Additional memory and CPU will be added implicitly for the Visual Studio Code - Open Source ("Code - OSS"):
 +
 [source,yaml,subs="+attributes,+quotes,macros"]
 ----
