--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -42,6 +42,16 @@ The `tools` component of the devfile defines the following requests and limits:
     cpuLimit: 500m
 ----
 
+** IMPORTANT: Additional memory and CPU will be added implicitly for the Visual Studio Code - Open Source ("Code - OSS"):
++
+[source,yaml,subs="+attributes,+quotes,macros"]
+----
+    memoryLimit: 1024M
+    memoryRequest: 256M
+    cpuRequest: 30m
+    cpuLimit: 500m
+----
+
 . Calculate the sums of the resources required for each workspace. If you intend to use multiple devfiles, repeat this calculation for every expected devfile.
 +
 .Workspace requirements for the link:https://github.com/che-incubator/quarkus-api-example/blob/main/devfile.yaml[example devfile] in the previous step
@@ -72,11 +82,19 @@ The `tools` component of the devfile defines the following requests and limits:
 |500 m
 |50 m
 
+|Visual Studio Code
+|`workspace`
+|`tools`
+|1024 MiB
+|256 MiB
+|500 m
+|30 m
+
 3+>s|Total
->s|6.3 GiB
->s|576 MiB
->s|4500 m
->s|1050 m
+>s|7.3 GiB
+>s|832 MiB
+>s|5000 m
+>s|1080 m
 |===
 ====
 
@@ -151,14 +169,6 @@ The `tools` component of the devfile defines the following requests and limits:
 |500 m
 |100 m
 
-|Devfile registry
-|`devfile-registry`
-|`devfile-registry`
-|256 MiB
-|32 MiB
-|500 m
-|100 m
-
 |Plugin registry
 |`plugin-registry`
 |`plugin-registry`
@@ -170,9 +180,9 @@ The `tools` component of the devfile defines the following requests and limits:
 |{devworkspace} Controller Manager
 |`{devworkspace-id}-controller-manager`
 |`{devworkspace-id}-controller`
-|1 GiB
+|5 GiB
 |100 MiB
-|1000 m
+|3000 m
 |250 m
 
 |{devworkspace} Controller Manager
@@ -216,10 +226,10 @@ The `tools` component of the devfile defines the following requests and limits:
 |N/A
 
 3+>s|Total
->s|9 GiB
+>s|13 GiB
 >s|1.2 GiB
->s|6.9
->s|1.3
+>s|8.4
+>s|1.2
 
 |===
 
