fix: article Applying editor configurations
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -58,7 +58,7 @@ data:
       "extensionEnabledApiProposals": {
         "ms-python.python": [
           "contribEditorContentMenu",
-          "quickPickSortByLabel",
+          "quickPickSortByLabel"
         ]
       },
       "trustedExtensionAuthAccess": [
@@ -92,7 +92,7 @@ TIP: Consider adding the ConfigMap to the {prod-namespace} namespace. By adding 
 * Ensure that the extensions from the ConfigMap are present in the `.code-workspace` file by using the `F1 → File: Open File...` command. By default, the workspace file is placed at `/projects/.code-workspace`.
 
 . Verify that product properties defined in the ConfigMap are being added to the Visual Studio Code *product.json*:
-* Open a terminal, run the command `cat /checode/entrypoint-logs.txt | grep "Node.js dir"` and copy the Visual Studio Code path.
+* Open a terminal, run the command `cat /checode/entrypoint-logs.txt | grep -a "Node.js dir"` and copy the Visual Studio Code path.
 * Press `Ctrl + O`, paste the copied path and open *product.json* file.
 * Ensure that *product.json* file contains all the properties defined in the ConfigMap.
 
