feat: hiding editors definitions
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -86,6 +86,8 @@
 ** xref:configuring-dashboard.adoc[]
 *** xref:configuring-getting-started-samples.adoc[]
 *** xref:configuring-editors-definitions.adoc[]
+*** xref:hiding-editors-definitions.adoc[]
+*** xref:show-deprecated-editors-definitions.adoc[]
 *** xref:configuring-default-editor-definition.adoc[]
 *** xref:concealing-editors-definitions.adoc[]
 *** xref:customizing-openshift-che-consolelink-icon.adoc[]
