--- a/modules/administration-guide/pages/configuring-dashboard.adoc
+++ b/modules/administration-guide/pages/configuring-dashboard.adoc
@@ -11,6 +11,10 @@
 
 * xref:configuring-editors-definitions.adoc[]
 
+* xref:hiding-editors-definitions.adoc[]
+
+* xref:show-deprecated-editors-definitions.adoc[]
+
 * xref:configuring-default-editor-definition.adoc[]
 
 * xref:concealing-editors-definitions.adoc[]
