--- a/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
+++ b/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
@@ -7,11 +7,13 @@
 [id="managing-workloads-using-the-{prod-id-short}-server-api"]
 = Managing {prod-short} server workloads using the {prod-short} server API
 
-To manage {prod-short} server workloads, use the Swagger web user interface to navigate {prod-short} server API.
+To manage {prod-short} server and {prod-short} dashboard workloads, use the Swagger web user interface to navigate API.
 
 .Procedure
 
-* Navigate to the Swagger API web user interface: `pass:c,a,q[{prod-url}]/swagger`.
+* Navigate to the Swagger API web user interface:
+ - `pass:c,a,q[{prod-url}]/swagger`   ({prod-short} server)
+ - `pass:c,a,q[{prod-url}]/dashboard/api/swagger`   ({prod-short} dashboard)
 
 .Additional resources
 
