fixup! feat: hiding editors definitions
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/administration-guide/pages/hiding-editors-definitions.adoc
+++ b/modules/administration-guide/pages/hiding-editors-definitions.adoc
@@ -17,6 +17,8 @@ TIP: An editor ID has the following format: `publisher/name/version`.
 
 .Procedure
 
+include::example$snip_che-editor-id-list.adoc[]
+
 . Configure the `CheCluster` Custom Resource. See xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[].
 +
 [source,yaml]
