--- a/modules/administration-guide/pages/configuring-default-editor-definition.adoc
+++ b/modules/administration-guide/pages/configuring-default-editor-definition.adoc
@@ -16,13 +16,7 @@ Learn how to configure {prod-short} default editor definition.
 
 .Procedure
 
-. Find out the IDs of the available editors:
-+
-[source,subs="+quotes,+attributes"]
-----
-{orch-cli} exec deploy/{prod-id-short}-dashboard -n {prod-namespace}  \
-    -- curl -s http://localhost:8080/dashboard/api/editors | jq -r '.[] | "\(.metadata.attributes.publisher)/\(.metadata.name)/\(.metadata.attributes.version)"'
-----
+include::example$snip_che-editor-id-list.adoc[]
 
 . Configure the `defaultEditor`:
 +
