fixup! fixup! feat: hiding editors definitions
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/administration-guide/examples/snip_che-editor-id-list.adoc
+++ b/modules/administration-guide/examples/snip_che-editor-id-list.adoc
@@ -1,6 +1,6 @@
 :_content-type: SNIPPET
 
-. Find out the IDs of the available editors:
+. An editor ID has the following format: `publisher/name/version`. Find out the IDs of the available editors:
 +
 [source,subs="+quotes,+attributes"]
 ----
