--- a/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
+++ b/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
@@ -1,11 +1,11 @@
 :_content-type: PROCEDURE
-:description: Managing {prod-short} server workloads using the {prod-short} server API
+:description: Managing {prod-short} server and {prod-short} dashboard workloads using the API
 :keywords: administration-guide, api
 :navtitle: Using the {prod-short} server API
 :page-aliases:
 
 [id="managing-workloads-using-the-{prod-id-short}-server-api"]
-= Managing {prod-short} server workloads using the {prod-short} server API
+= Managing {prod-short} server and {prod-short} dashboard workloads using the API
 
 To manage {prod-short} server and {prod-short} dashboard workloads, use the Swagger web user interface to navigate API.
 
