--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -52,7 +52,7 @@ The `tools` component of the devfile defines the following requests and limits:
     cpuLimit: 500m
 ----
 
-** IMPORTANT: Additional memory and CPU will be added implicitly for a JetBrains IDE (like IntelliJ IDEA Ultimate):
+** IMPORTANT: Additional memory and CPU will be added implicitly for a JetBrains IDE (e.g. IntelliJ IDEA Ultimate):
 +
 [source,yaml,subs="+attributes,+quotes,macros"]
 ----
