Document the resource requirements for running a CDE with a JetBrains IDE (#2909)
* Document the resource requirements for running a CDE with a JetBrains IDE

Signed-off-by: Artem Zatsarynnyi <azatsary@redhat.com>

* Update modules/administration-guide/pages/calculating-che-resource-requirements.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

---------

Signed-off-by: Artem Zatsarynnyi <azatsary@redhat.com>
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -52,6 +52,16 @@ The `tools` component of the devfile defines the following requests and limits:
     cpuLimit: 500m
 ----
 
+** IMPORTANT: Additional memory and CPU will be added implicitly for a JetBrains IDE (e.g. IntelliJ IDEA Ultimate):
++
+[source,yaml,subs="+attributes,+quotes,macros"]
+----
+    memoryLimit: 6144M
+    memoryRequest: 2048M
+    cpuRequest: 1500m
+    cpuLimit: 2000m
+----
+
 . Calculate the sums of the resources required for each workspace. If you intend to use multiple devfiles, repeat this calculation for every expected devfile.
 +
 .Workspace requirements for the link:https://github.com/che-incubator/quarkus-api-example/blob/main/devfile.yaml[example devfile] in the previous step
