fixup! fixup! fixup! fixup! feat: hiding editors definitions
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/administration-guide/examples/snip_che-editor-id-list.adoc
+++ b/modules/administration-guide/examples/snip_che-editor-id-list.adoc
@@ -5,5 +5,5 @@
 [source,subs="+quotes,+attributes"]
 ----
 {orch-cli} exec deploy/{prod-id-short}-dashboard -n {prod-namespace}  \
-    -- curl -s http://localhost:8080/dashboard/api/editors | jq -r '.[] | "\(.metadata.attributes.publisher)/\(.metadata.name)/\(.metadata.attributes.version)"'
+    -- curl -s http://localhost:8080/dashboard/api/editors | jq -r '[.[] | "\(.metadata.attributes.publisher)/\(.metadata.name)/\(.metadata.attributes.version)"]'
 ----
