--- a/modules/administration-guide/pages/concealing-editors.adoc
+++ b/modules/administration-guide/pages/concealing-editors.adoc
@@ -1,12 +1,12 @@
 :_content-type: PROCEDURE
-:description: Concealing editors definitions
+:description: Concealing editors in the Dashboard UI
 :keywords: administration guide, concealing, dashboard, editors
-:navtitle: Concealing editors definitions
+:navtitle: Concealing editors
 
-[id="concealing-editors-definitions"]
-= Concealing editors definitions
+[id="concealing-editors"]
+= Concealing editors
 
-Learn how to conceal {prod-short} editor definitions. This is useful when you want to hide selected editors from the Dashboard UI, e.g. hide the IntelliJ IDEA Ultimate and have only Visual Studio Code - Open Source visible.
+Learn how to conceal {prod-short} editor. This is useful when you want to hide selected editors from the Dashboard UI, e.g. hide the IntelliJ IDEA Ultimate and have only Visual Studio Code - Open Source visible.
 
 .Prerequisites
 
@@ -29,7 +29,7 @@ spec:
         containers:
         - env:
           - name: CHE_HIDE_EDITORS_BY_ID
-            value: 'che-incubator/che-webstorm-server/latest, che-incubator/che-webstorm-server/next'    <1>
+            value: 'che-incubator/che-webstorm-server/latest, che-incubator/che-webstorm-server/next' <1>
 ----
 <1> A string containing comma-separated IDs of editors to hide.
 
