--- a/modules/administration-guide/pages/configuring-dashboard.adoc
+++ b/modules/administration-guide/pages/configuring-dashboard.adoc
@@ -11,11 +11,11 @@
 
 * xref:configuring-editors-definitions.adoc[]
 
-* xref:show-deprecated-editors-definitions.adoc[]
+* xref:show-deprecated-editors.adoc[]
 
-* xref:configuring-default-editor-definition.adoc[]
+* xref:configuring-default-editor.adoc[]
 
-* xref:concealing-editors-definitions.adoc[]
+* xref:concealing-editors.adoc[]
 
 * xref:customizing-openshift-che-consolelink-icon.adoc[]
 
