--- a/modules/administration-guide/pages/configuring-default-editor.adoc
+++ b/modules/administration-guide/pages/configuring-default-editor.adoc
@@ -1,12 +1,12 @@
 :_content-type: PROCEDURE
 :description: Configuring default editor
 :keywords: administration guide, dashboard, editors
-:navtitle: Configuring default editor definition
+:navtitle: Configuring default editor
 
-[id="configuring-default-editor-definition"]
-= Configuring default editor definition
+[id="configuring-default-editor"]
+= Configuring default editor
 
-Learn how to configure {prod-short} default editor definition.
+Learn how to configure {prod-short} default editor.
 
 .Prerequisites
 
@@ -33,7 +33,7 @@ include::example$snip_che-editor-id-list.adoc[]
 
 * xref:configuring-editors-definitions.adoc[]
 
-* xref:concealing-editors-definitions.adoc[]
+* xref:concealing-editors.adoc[]
 
 * {editor-definition-samples-link}
 
