fixup! fixup! fixup! fixup! fixup! feat: hiding editors definitions
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/administration-guide/pages/show-deprecated-editors.adoc
+++ b/modules/administration-guide/pages/show-deprecated-editors.adoc
@@ -7,9 +7,7 @@
 [id="show-deprecated-editors"]
 = Show deprecated editors
 
-Learn how to show deprecated {prod-short} editors.
-
-NOTE: By default, the deprecated editors are hidden in the Dashboard UI. To show them, you need to set the `CHE_SHOW_DEPRECATED_EDITORS` environment variable to `true`.
+Learn how to show deprecated {prod-short} editors on the Dashboard. By default, the Dashboard UI hides them.
 
 .Prerequisites
 
