feat: add info about hiding editor definitions (#2908)
* feat: hiding editors definitions

Signed-off-by: Oleksii Orel <oorel@redhat.com>

* fixup! feat: hiding editors definitions

Signed-off-by: Oleksii Orel <oorel@redhat.com>

* fixup! fixup! feat: hiding editors definitions

Signed-off-by: Oleksii Orel <oorel@redhat.com>

* fixup! fixup! fixup! feat: hiding editors definitions

Signed-off-by: Oleksii Orel <oorel@redhat.com>

* fixup! fixup! fixup! fixup! feat: hiding editors definitions

Signed-off-by: Oleksii Orel <oorel@redhat.com>

* fixup! fixup! fixup! fixup! fixup! feat: hiding editors definitions

Signed-off-by: Oleksii Orel <oorel@redhat.com>

---------

Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -86,8 +86,9 @@
 ** xref:configuring-dashboard.adoc[]
 *** xref:configuring-getting-started-samples.adoc[]
 *** xref:configuring-editors-definitions.adoc[]
-*** xref:configuring-default-editor-definition.adoc[]
-*** xref:concealing-editors-definitions.adoc[]
+*** xref:show-deprecated-editors.adoc[]
+*** xref:configuring-default-editor.adoc[]
+*** xref:concealing-editors.adoc[]
 *** xref:customizing-openshift-che-consolelink-icon.adoc[]
 ** xref:managing-identities-and-authorizations.adoc[]
 *** xref:configuring-oauth-for-git-providers.adoc[]
