--- a/modules/administration-guide/pages/configuring-default-editor.adoc
+++ b/modules/administration-guide/pages/configuring-default-editor.adoc
@@ -1,12 +1,12 @@
 :_content-type: PROCEDURE
 :description: Configuring default editor
 :keywords: administration guide, dashboard, editors
-:navtitle: Configuring default editor definition
+:navtitle: Configuring default editor
 
-[id="configuring-default-editor-definition"]
-= Configuring default editor definition
+[id="configuring-default-editor"]
+= Configuring default editor
 
-Learn how to configure {prod-short} default editor definition.
+Learn how to configure {prod-short} default editor.
 
 .Prerequisites
 
@@ -16,13 +16,7 @@ Learn how to configure {prod-short} default editor definition.
 
 .Procedure
 
-. Find out the IDs of the available editors:
-+
-[source,subs="+quotes,+attributes"]
-----
-{orch-cli} exec deploy/{prod-id-short}-dashboard -n {prod-namespace}  \
-    -- curl -s http://localhost:8080/dashboard/api/editors | jq -r '.[] | "\(.metadata.attributes.publisher)/\(.metadata.name)/\(.metadata.attributes.version)"'
-----
+include::example$snip_che-editor-id-list.adoc[]
 
 . Configure the `defaultEditor`:
 +
@@ -39,7 +33,7 @@ Learn how to configure {prod-short} default editor definition.
 
 * xref:configuring-editors-definitions.adoc[]
 
-* xref:concealing-editors-definitions.adoc[]
+* xref:concealing-editors.adoc[]
 
 * {editor-definition-samples-link}
 
