--- a/modules/administration-guide/pages/concealing-editors.adoc
+++ b/modules/administration-guide/pages/concealing-editors.adoc
@@ -6,7 +6,7 @@
 [id="concealing-editors"]
 = Concealing editors
 
-Learn how to conceal {prod-short} editor. This is useful when you want to hide selected editors from the Dashboard UI, e.g. hide the IntelliJ IDEA Ultimate and have only Visual Studio Code - Open Source visible.
+Learn how to conceal {prod-short} editors. This is useful when you want to hide selected editors from the Dashboard UI, e.g. hide the IntelliJ IDEA Ultimate and have only Visual Studio Code - Open Source visible.
 
 .Prerequisites
 
