chore: Add URL parameters to limit resource usage
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -12,6 +12,8 @@
 **** xref:url-parameter-for-the-workspace-storage.adoc[]
 **** xref:url-parameter-for-additional-remotes.adoc[]
 **** xref:url-parameter-for-container-image.adoc[]
+**** xref:url-parameter-for-memory-limit.adoc[]
+**** xref:url-parameter-for-cpu-limit.adoc[]
 ** xref:starting-a-workspace-from-a-raw-devfile-url.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
