--- a/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
+++ b/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
@@ -18,3 +18,5 @@ When you start a new workspace, {prod-short} configures the workspace according 
 * xref:url-parameter-for-the-workspace-storage.adoc[]
 * xref:url-parameter-for-additional-remotes.adoc[]
 * xref:url-parameter-for-container-image.adoc[]
+* xref:url-parameter-for-memory-limit.adoc[]
+* xref:url-parameter-for-cpu-limit.adoc[]
