--- a/modules/end-user-guide/pages/url-parameter-for-cpu-limit.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-cpu-limit.adoc
@@ -26,10 +26,11 @@ You can specify the CPU limit in cores.
 
 ====
 [IMPORTANT]
-
-When you specify the `cpuLimit` parameter, it will override the CPU limit defined in the devfile for the first container.
+====
+When you specify the `cpuLimit` parameter, it overrides the CPU limit defined in the devfile for the first container.
 
 The sum of the limits from the target devfile and from the editor-definition will be applied to the workspace pod `spec.containers[0].resources.limits.cpu`.
+====
 
 .Additional resources
 
