fixup! fix: Swagger API web user interface links
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
+++ b/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
@@ -15,6 +15,8 @@ To manage {prod-short} server and {prod-short} dashboard workloads, use the Swag
  - `pass:c,a,q[{prod-url}]/swagger`   ({prod-short} server)
  - `pass:c,a,q[{prod-url}]/dashboard/api/swagger`   ({prod-short} dashboard)
 
+IMPORTANT: DevWorkspace is a k8s object and manipulations should happen on the Kubernetes API level - xref:../../end-user-guide/pages/managing-workspaces-with-apis.adoc[]
+
 .Additional resources
 
 * link:https://swagger.io/[Swagger]
