--- a/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
+++ b/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
@@ -15,7 +15,7 @@ To manage {prod-short} server and {prod-short} dashboard workloads, use the Swag
  - `pass:c,a,q[{prod-url}]/swagger`   ({prod-short} server)
  - `pass:c,a,q[{prod-url}]/dashboard/api/swagger`   ({prod-short} dashboard)
 
-IMPORTANT: DevWorkspace is a k8s object and manipulations should happen on the Kubernetes API level - xref:../../end-user-guide/pages/managing-workspaces-with-apis.adoc[]
+IMPORTANT: DevWorkspace is a k8s object and manipulations should happen on the Kubernetes API level - xref:end-user-guide:managing-workspaces-with-apis.adoc[]
 
 .Additional resources
 
