--- a/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
+++ b/modules/administration-guide/pages/managing-workloads-using-the-che-server-api.adoc
@@ -7,7 +7,7 @@
 [id="managing-workloads-using-the-{prod-id-short}-server-api"]
 = Managing {prod-short} server and {prod-short} dashboard workloads using the API
 
-To manage {prod-short} server and {prod-short} dashboard workloads, use the Swagger web user interface to navigate API.
+To manage {prod-short} server and {prod-short} dashboard workloads, use the Swagger web user interface to navigate the API.
 
 .Procedure
 
