--- a/modules/end-user-guide/pages/url-parameter-for-cpu-limit.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-cpu-limit.adoc
@@ -7,7 +7,7 @@
 [id="url-parameter-for-cpu-limit"]
 = URL parameter for a CPU limit
 
-You can use the `cpuLimit` parameter to specify or override container CPU limit
+You can use the `cpuLimit` parameter to specify or override the container CPU limit
 when starting a new workspace from a devfile URL. This is useful when you want to ensure that the workspace has enough memory allocated for your development tasks.
 
 The URL parameter for the CPU limit is `cpuLimit=`:
