--- a/modules/end-user-guide/pages/url-parameter-for-memory-limit.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-memory-limit.adoc
@@ -7,7 +7,7 @@
 [id="url-parameter-for-memory-limit"]
 = URL parameter for a memory limit
 
-You can use the `memoryLimit` parameter to specify or override container memory limit
+You can use the `memoryLimit` parameter to specify or override the container memory limit
 when starting a new workspace from a devfile URL. This is useful when you want to ensure that the workspace has enough memory allocated for your development tasks.
 
 The URL parameter for the memory limit is `memoryLimit=`:
