--- a/modules/end-user-guide/pages/url-parameter-for-memory-limit.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-memory-limit.adoc
@@ -27,7 +27,7 @@ You can specify the memory limit in bytes, or use a suffix such as `Mi` for mebi
 ====
 [IMPORTANT]
 ====
-When you specify the `memoryLimit` parameter, it overrides the memory limit defined in the devfile for the first container.
+When you specify the `memoryLimit` parameter, it overrides the memory limit defined for the first container of the devfile.
 
 The sum of the limits from the target devfile and from the editor-definition will be applied to the workspace pod `spec.containers[0].resources.limits.memory`.
 ====
