--- a/modules/end-user-guide/pages/url-parameter-for-cpu-limit.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-cpu-limit.adoc
@@ -27,7 +27,7 @@ You can specify the CPU limit in cores.
 ====
 [IMPORTANT]
 ====
-When you specify the `cpuLimit` parameter, it overrides the CPU limit defined in the devfile for the first container.
+When you specify the `cpuLimit` parameter, it overrides the CPU limit defined for the first container of the devfile.
 
 The sum of the limits from the target devfile and from the editor-definition will be applied to the workspace pod `spec.containers[0].resources.limits.cpu`.
 ====
