--- a/modules/end-user-guide/pages/navigating-che-from-openshift-developer-perspective.adoc
+++ b/modules/end-user-guide/pages/navigating-che-from-openshift-developer-perspective.adoc
@@ -23,6 +23,17 @@ The Developer perspective provides workflows specific to developer use cases, su
 
 * Create workspaces to edit your application code using {prod-short}.
 
+[IMPORTANT]
+====
+Starting with {ocp} 4.19, the perspectives in the web console have unified to simplify navigation, reduce context switching, streamline tasks, and provide users with a more cohesive {ocp} experience.
+
+With this unified design, there is no longer a *Developer* perspective in the default view; however, _all_ {ocp} web console features are discoverable to all users. If you are not the cluster owner, you might need to request permission for certain features from the cluster owner. The *Developer* perspective can still be manually enabled if you prefer.
+
+The *Getting Started* pane in the web console provides resources such as, a tour of the console, information on setting up your cluster, a quick start for enabling the *Developer* perspective, and links to explore new features and capabilities.
+
+//See xref:../web_console/web-console-overview#enabling-developer-perspective_web-console_web-console-overview for more information on enabling the *Developer* perspective.
+====
+
 include::partial$con_openshift-developer-perspective-integration-with-che.adoc[leveloffset=+1]
 
 include::partial$proc_editing-the-code-of-applications-running-in-openshift-container-platform-using-che.adoc[leveloffset=+1]
