--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -1,6 +1,7 @@
 .Administration Guide
 
 * xref:security-best-practices.adoc[]
+* xref:running-at-scale.adoc[]
 * xref:preparing-the-installation.adoc[]
 ** xref:supported-platforms.adoc[]
 ** xref:installing-the-chectl-management-tool.adoc[]
