fix vale issues

--- a/modules/administration-guide/pages/running-at-scale.adoc
+++ b/modules/administration-guide/pages/running-at-scale.adoc
@@ -91,7 +91,7 @@ spec:
 
 include::example$snip_che-running-at-scale-untrusted-cert.adoc[]
 
-.DevWorkspace objects
+.{devworkspace} objects
 
 For large {kubernetes} deployments, particularly those involving a high number of custom resources such as `DevWorkspace` objects, which represent CDEs, etcd can become a significant performance bottleneck.
 
@@ -123,7 +123,7 @@ config:
 
 [NOTE]
 ====
-You can find more details about DevWorkspace Operator Configuration in the link:https://github.com/devfile/devworkspace-operator/blob/main/docs/dwo-configuration.md[official documentation].
+You can find more details about {devworkspace} Operator Configuration in the link:https://github.com/devfile/devworkspace-operator/blob/main/docs/dwo-configuration.md[official documentation].
 ====
 
 .OLMConfig
