--- a/modules/administration-guide/pages/running-at-scale.adoc
+++ b/modules/administration-guide/pages/running-at-scale.adoc
@@ -117,9 +117,11 @@ config:
     cleanupCronJob:
       enabled: true
       dryRun: false
-      retainTime: 2592000 # By default, if a workspace was not started for more than 30 days it will be marked for deletion
-      schedule: “0 0 1 * *” # By default, the pruner will run once per month
+      retainTime: 2592000 <1>
+      schedule: “0 0 1 * *” <2>
 ----
+<1> By default, if a workspace was not started for more than 30 days it will be marked for deletion.
+<2> By default, the pruner will run once per month.
 
 [NOTE]
 ====
