chore: Add a URL parameter for the existing workspace name
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/end-user-guide/pages/url-parameter-for-starting-duplicate-workspaces.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-starting-duplicate-workspaces.adoc
@@ -18,4 +18,4 @@ The URL parameter for starting a duplicate workspace is `new`:
 pass:c,a,q[{prod-url}]#__<git_repository_url>__?new
 ----
 
-NOTE: If you currently have a workspace that you started using a URL, then visiting the URL again without the `new` URL parameter results in an error message.
+NOTE: If you currently have a workspace that you started using a URL, then visiting the URL again without the `new` URL parameter opens an existing workspace..
