--- a/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
+++ b/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
@@ -20,3 +20,4 @@ When you start a new workspace, {prod-short} configures the workspace according 
 * xref:url-parameter-for-container-image.adoc[]
 * xref:url-parameter-for-memory-limit.adoc[]
 * xref:url-parameter-for-cpu-limit.adoc[]
+* xref:url-parameter-for-the-existing-workspace-name.adoc[]
