--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -14,6 +14,7 @@
 **** xref:url-parameter-for-container-image.adoc[]
 **** xref:url-parameter-for-memory-limit.adoc[]
 **** xref:url-parameter-for-cpu-limit.adoc[]
+**** xref:url-parameter-for-the-existing-workspace-name.adoc[]
 ** xref:starting-a-workspace-from-a-raw-devfile-url.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
