--- a/modules/administration-guide/pages/running-at-scale.adoc
+++ b/modules/administration-guide/pages/running-at-scale.adoc
@@ -63,10 +63,7 @@ The resource requirements for CDEs can vary significantly based on the specific 
 For example, a simple CDE might require only a few hundred megabytes of memory,
 while a more complex one will need several gigabytes of memory and multiple CPU cores.
 
-[NOTE]
-====
-You can find more details about calculating resource requirements in the link:https://eclipse.dev/che/docs/stable/administration-guide/calculating-che-resource-requirements/[official documentation].
-====
+include::example$snip_che-running-at-scale-calculate-resources.adoc
 
 .Using etcd
 
@@ -111,7 +108,7 @@ For large {kubernetes} deployments, particularly those involving a high number o
 Based on the load testing for 6,000 `DevWorkspace` objects, storage consumption for etcd was approximately 2.5GB.
 ====
 
-Starting from link:https://github.com/devfile/devworkspace-operator[DevWorkspace Operator] version 0.34.0,
+Starting from DevWorkspace Operator version 0.34.0,
 you can configure a pruner
 that automatically cleans up `DevWorkspace` objects that were not in use for a certain period of time.
 To set the pruner up, configure the `DevWorkspaceOperatorConfig` object as follows:
@@ -133,11 +130,6 @@ config:
 ----
 <1> By default, if a workspace was not started for more than 30 days it will be marked for deletion.
 <2> By default, the pruner will run once per month.
-
-[NOTE]
-====
-You can find more details about {devworkspace} Operator Configuration in the link:https://github.com/devfile/devworkspace-operator/blob/main/docs/dwo-configuration.md[official documentation].
-====
 
 .OLMConfig
 
