--- a/modules/administration-guide/pages/running-at-scale.adoc
+++ b/modules/administration-guide/pages/running-at-scale.adoc
@@ -108,7 +108,7 @@ For large {kubernetes} deployments, particularly those involving a high number o
 Based on the load testing for 6,000 `DevWorkspace` objects, storage consumption for etcd was approximately 2.5GB.
 ====
 
-Starting from DevWorkspace Operator version 0.34.0,
+Starting from {devworkspace} Operator version 0.34.0,
 you can configure a pruner
 that automatically cleans up `DevWorkspace` objects that were not in use for a certain period of time.
 To set the pruner up, configure the `DevWorkspaceOperatorConfig` object as follows:
