--- a/modules/end-user-guide/pages/url-parameter-for-starting-duplicate-workspaces.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-starting-duplicate-workspaces.adoc
@@ -18,4 +18,7 @@ The URL parameter for starting a duplicate workspace is `new`:
 pass:c,a,q[{prod-url}]#__<git_repository_url>__?new
 ----
 
-NOTE: If you currently have a workspace that you started using a URL, then visiting the URL again without the `new` URL parameter opens an existing workspace..
+[NOTE] 
+====
+If you currently have a workspace that you started by using a URL, then visiting the URL again without the `new` URL parameter opens the existing workspace.
+====
