--- a/modules/administration-guide/pages/running-at-scale.adoc
+++ b/modules/administration-guide/pages/running-at-scale.adoc
@@ -63,7 +63,7 @@ The resource requirements for CDEs can vary significantly based on the specific 
 For example, a simple CDE might require only a few hundred megabytes of memory,
 while a more complex one will need several gigabytes of memory and multiple CPU cores.
 
-include::example$snip_che-running-at-scale-calculate-resources.adoc
+include::example$snip_che-running-at-scale-calculate-resources.adoc[]
 
 .Using etcd
 
