--- a/modules/administration-guide/pages/running-at-scale.adoc
+++ b/modules/administration-guide/pages/running-at-scale.adoc
@@ -185,6 +185,9 @@ This approach can help
 improve performance and reliability by distributing the workload across multiple clusters
 and providing redundancy in case of cluster failures.
 
+.Scheme of a multi-cluster environment
+image::docs:administration-guide:running-at-scale/snip_che-multi-cluster.png[Scheme of a multi-cluster environment]
+
 You can test running {prod-short} in a multi-cluster by using the link:https://developers.redhat.com/developer-sandbox[Developer Sandbox],
 a free trial environment by Red Hat with pre-configured tools and services.
 From an infrastructure perspective,
